--- a/infrastructure/github-env-setup.yml
+++ b/infrastructure/github-env-setup.yml
@@ -3,7 +3,7 @@ AWSTemplateFormatVersion: '2010-09-09'
 Parameters:
   GitHubOrg:
     Type: String
-    Default: aws-samples
+    Default: aws
   RepositoryName:
     Type: String
     Default: aws-parallelcluster-ui
