Adjusted repository name and org name defaults for Github action workflow files (#4)
* adjusted repository name

* adjusted repo and org defaults

* adjusted org default

---------

Co-authored-by: Marco Basile <mrbarco@amazon.com>

--- a/infrastructure/github-env-setup-prod.yml
+++ b/infrastructure/github-env-setup-prod.yml
@@ -3,10 +3,10 @@ AWSTemplateFormatVersion: '2010-09-09'
 Parameters:
   GitHubOrg:
     Type: String
-    Default: aws-samples
+    Default: aws
   RepositoryName:
     Type: String
-    Default: pcluster-manager
+    Default: aws-parallelcluster-ui
 
 Resources:
   ProductionDeploy:
