--- a/infrastructure/parallelcluster-ui.yaml
+++ b/infrastructure/parallelcluster-ui.yaml
@@ -699,7 +699,7 @@ Resources:
             - ec2:StartInstances
             - ec2:StopInstances
             Resource:
-              - !Sub arn:${AWS::Partition}:ec2:${AWS::Region}:${AWS::AccountId}:instance/*
+              - !Sub arn:${AWS::Partition}:ec2:*:${AWS::AccountId}:instance/*
             Condition:
               StringLike:
                 ec2:ResourceTag/parallelcluster:version: "*"
