Set 'email_verified' to True in Cognito user pool both for admin user and new users

--- a/infrastructure/parallelcluster-ui-cognito.yaml
+++ b/infrastructure/parallelcluster-ui-cognito.yaml
@@ -86,6 +86,8 @@ Resources:
       UserAttributes:
         - Name: email
           Value: !Ref AdminUserEmail
+        - Name: email_verified
+          Value: True
       Username: !Ref AdminUserEmail
       UserPoolId: !Ref CognitoUserPool
 
