Updated PCUI naming in log4brains.yml

--- a/.log4brains.yml
+++ b/.log4brains.yml
@@ -1,5 +1,5 @@
 project:
-  name: ParallelCluster Manager (PCM)
+  name: ParallelCluster UI (PCUI)
   tz: Europe/Rome
   adrFolder: ./decisions
   packages: []
