Updated usage inside gh action

--- a/.github/workflows/production_release.yml
+++ b/.github/workflows/production_release.yml
@@ -74,7 +74,7 @@ jobs:
           role-to-assume: ${{ secrets.ACTION_PRODUCTION_RELEASE_ROLE }}
 
       - name: Build and upload Docker image
-        run: ./scripts/build_and_release_image.sh
+        run: ./scripts/build_and_release_image.sh --tag ${{ github.ref_name }}
       
       - name: Upload infrastructure files to S3
         run: ./infrastructure/release_infrastructure.sh
