--- a/infrastructure/parallelcluster-ui-cognito.yaml
+++ b/infrastructure/parallelcluster-ui-cognito.yaml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
-Description: ParallelCluster UI Cognito User Pool
+Description: AWS ParallelCluster UI Cognito User Pool
 
 Parameters:
   AdminUserEmail:
