--- a/infrastructure/parallelcluster-ui.yaml
+++ b/infrastructure/parallelcluster-ui.yaml
@@ -1,12 +1,10 @@
+Description: 'AWS ParallelCluster UI'
+
 Parameters:
   AdminUserEmail:
     Description: Email address of administrative user to setup by default (only with new Cognito instances).
     Type: String
     Default: ''
-  PublicEcrImageUri:
-    Description: When specified, the URI of the Docker image for the Lambda of the ParallelCluster UI container
-    Type: String
-    Default: public.ecr.aws/pcm/parallelcluster-ui:2023.02
   UserPoolId:
     Description: UserPoolId of a previously deployed PCUI Cognito User Pool. Leave blank to create a new one.
     Type: String
@@ -23,14 +21,10 @@ Parameters:
     Description: Version of AWS ParallelCluster to deploy
     Type: String
     Default: 3.5.0
-  ImageBuilderVpcId:
-    Description: (Optional) Select the VPC to use for building the container images. If not selected, default VPC will be used.
+  PCUIVersion:
+    Description: Version of AWS ParallelCluster to deploy
     Type: String
-    Default: ''
-  ImageBuilderSubnetId:
-    Description: (Optional) Select the subnet to use for building the container images (public subnets only). If not selected, Subnet in the default VPC will be used.
-    Type: String
-    Default: ''
+    Default: latest
   InfrastructureBucket:
     Description: (Optional) S3 bucket where CloudFormation files are stored. Change this parameter only when testing changes made to the infrastructure itself.
     Type: String
@@ -44,10 +38,6 @@ Metadata:
         Parameters: 
           - AdminUserEmail
       - Label:
-          default: ParallelCluster UI
-        Parameters:
-          - PublicEcrImageUri
-      - Label:
           default: (Optional) External PCUI Cognito
         Parameters:
           - UserPoolId
@@ -57,11 +47,6 @@ Metadata:
           default: ParallelCluster API
         Parameters:
           - Version
-      - Label:
-          default: (Optional) ImageBuilder Custom VPC
-        Parameters:
-          - ImageBuilderVpcId
-          - ImageBuilderSubnetId
       - Label:
           default: (Debugging only) Infrastructure S3 Bucket
         Parameters:
@@ -78,10 +63,6 @@ Metadata:
         default: SNSRole ARN from a previously deployed PCUI
 
 Conditions:
-  NonDefaultVpc:
-    Fn::And:
-      - !Not [!Equals [!Ref ImageBuilderVpcId, ""]]
-      - !Not [!Equals [!Ref ImageBuilderSubnetId, ""]]
   HasDefaultInfrastructure: !Equals [!Ref InfrastructureBucket, '']
   UseExistingCognito:
     !And
@@ -89,12 +70,16 @@ Conditions:
       - !Not [!Equals [!Ref UserPoolAuthDomain, ""]]
       - !Not [!Equals [!Ref SNSRole, ""]]
   UseNewCognito:
-    !Not [ Condition: UseExistingCognito]
+    !Not [ Condition: UseExistingCognito ]
+  HasDefaultPCInfrastructure: !Equals [!FindInMap [ParallelCluster, Constants, Bucket ], '']
 
 Mappings:
   ParallelClusterUI:
     Constants:
       Version: 2023.02.0 # format YYYY.MM.REVISION
+  ParallelCluster:
+    Constants:
+      Bucket: ''  # default ParallelCluster bucket
 
 Resources:
 
@@ -106,11 +91,12 @@ Resources:
       Parameters:
         AdminUserEmail: !Ref AdminUserEmail
       TemplateURL: !Sub 
-        - '${Bucket}/parallelcluster-ui-cognito.yaml'
-        - Bucket: !If 
+        - 'https://s3.${AWS::URLSuffix}/${Bucket}/parallelcluster-ui/${PCUIVersion}/templates/parallelcluster-ui-cognito.yaml'
+        - Bucket: !If
           - HasDefaultInfrastructure
           - PLACEHOLDER
-          - !Sub ${InfrastructureBucket}
+          - !Ref InfrastructureBucket
+          PCUIVersion: !Ref PCUIVersion
 
       TimeoutInMinutes: 10
 
@@ -118,39 +104,39 @@ Resources:
     Type: AWS::CloudFormation::Stack
     Properties:
       Parameters:
-        ApiDefinitionS3Uri: !Sub s3://${AWS::Region}-aws-parallelcluster/parallelcluster/${Version}/api/ParallelCluster.openapi.yaml
+        ApiDefinitionS3Uri: !Sub
+          - s3://${Bucket}/parallelcluster/${Version}/api/ParallelCluster.openapi.yaml
+          - { Bucket: !If [ HasDefaultPCInfrastructure, !Sub "${AWS::Region}-aws-parallelcluster", !FindInMap [ParallelCluster, Constants, Bucket]]}
         CreateApiUserRole: False
         EnableIamAdminAccess: True
-        PublicEcrImageUri: !Sub public.ecr.aws/parallelcluster/pcluster-api:${Version}
-        ImageBuilderSubnetId:
-          Fn::If:
-            - NonDefaultVpc
-            - !Ref ImageBuilderSubnetId
-            - !Ref AWS::NoValue
-        ImageBuilderVpcId:
-          Fn::If:
-            - NonDefaultVpc
-            - !Ref ImageBuilderVpcId
-            - !Ref AWS::NoValue
-      TemplateURL: !Sub https://${AWS::Region}-aws-parallelcluster.s3.${AWS::Region}.amazonaws.com/parallelcluster/${Version}/api/parallelcluster-api.yaml
+        CustomBucket: !If
+          - HasDefaultPCInfrastructure
+          - !Sub ${AWS::Region}-aws-parallelcluster
+          - !FindInMap [ParallelCluster, Constants, Bucket ]
+        PoliciesTemplateUri: !Sub 
+          - https://${Bucket}.s3.${AWS::Region}.${AWS::URLSuffix}/parallelcluster/${Version}/templates/policies/policies.yaml
+          - { Bucket: !If [ HasDefaultPCInfrastructure, !Sub "${AWS::Region}-aws-parallelcluster", !FindInMap [ParallelCluster, Constants, Bucket]]}
+      TemplateURL: !Sub https://pcluster-cfn-${AWS::Region}.s3.${AWS::Region}.${AWS::URLSuffix}/parallelcluster/${Version}/api/parallelcluster-api.yaml
       TimeoutInMinutes: 30
 
-  SSMDefaultUser:
-    Type: AWS::CloudFormation::Stack
+  PclusterUILayer:
+    Type: AWS::Lambda::LayerVersion
     Properties:
-      TemplateURL: !Sub 
-        - '${Bucket}/SSMSessionProfile-cfn.yaml'
-        - Bucket: !If 
-          - HasDefaultInfrastructure
-          - PLACEHOLDER
-          - !Sub ${InfrastructureBucket}
-      TimeoutInMinutes: 30
+      LayerName: !Sub PCUILayer-${AWS::StackName}
+      Description: Library which contains aws-parallelcluster-ui python package and dependencies
+      Content:
+        S3Bucket: !If [ HasDefaultInfrastructure, !Sub "pcluster-cfn-${AWS::Region}",!Ref InfrastructureBucket ]
+        S3Key: !Sub
+          - parallelcluster-ui/${Version}/layers/aws-parallelcluster-ui/layer.zip
+          - { Version: !Ref PCUIVersion }
+      CompatibleRuntimes:
+        - python3.9
+
 
   ParallelClusterUIFunction:
     Type: AWS::Lambda::Function
     Properties:
       Role: !GetAtt ParallelClusterUIUserRole.Arn
-      PackageType: Image
       MemorySize: 512
       Timeout: 30
       Tags:
@@ -160,6 +146,8 @@ Resources:
         Mode: Active
       Environment:
         Variables:
+          PYTHONUNBUFFERED: 1
+          STATIC_PATH: /opt/frontend/public/
           API_BASE_URL: !GetAtt [ ParallelClusterApi, Outputs.ParallelClusterApiInvokeUrl ]
           API_VERSION: !Ref Version
           SITE_URL: !Sub
@@ -172,13 +160,49 @@ Resources:
       FunctionName: !Sub
         - ParallelClusterUIFunction-${StackIdSuffix}
         - { StackIdSuffix: !Select [2, !Split ['/', !Ref 'AWS::StackId']] }
+      Handler: index.handler
+      Layers:
+        - !Ref PclusterUILayer
+      Runtime: python3.9
       Code:
-        ImageUri: !Sub
-          - ${AWS::AccountId}.dkr.ecr.${AWS::Region}.${AWS::URLSuffix}/${Repository}:${Version}
-          - Repository: !Ref PrivateEcrRepository
-            Version: !Join
-              - '-'
-              - [!Select [2, !Split ['/', !Ref EcrImage]], !Select [3, !Split ['/', !Ref EcrImage]]]
+        ZipFile: |
+          import logging
+          import os
+          from os import environ
+          from typing import Any, Dict
+
+
+          logger = logging.getLogger()
+          logger.setLevel(logging.INFO)
+
+          from awslambda.serverless_wsgi import handle_request
+          import pcui.app
+
+          # Initialize as a global to re-use across Lambda invocations
+          pcluster_ui_api = None  # pylint: disable=invalid-name
+
+          profile = environ.get("PROFILE", "prod")
+          is_dev_profile = profile == "dev"
+
+          if is_dev_profile:
+              logger.info("Running with dev profile")
+              environ["FLASK_ENV"] = "development"
+              environ["FLASK_DEBUG"] = "1"
+
+          def _init_flask_app():
+              return pcui.app.run()
+
+          def handler(event: Dict[str, Any], context) -> Dict[str, Any]:
+              try:
+                  global pcluster_ui_api  # pylint: disable=global-statement,invalid-name
+                  if not pcluster_ui_api:
+                      logger.info("Initializing Flask Application")
+                      pcluster_ui_api = _init_flask_app()
+                  os.environ["AWS_DEFAULT_REGION"] = os.environ["AWS_REGION"]
+                  return handle_request(pcluster_ui_api, event, context)
+              except Exception as e:
+                  logger.critical("Unexpected exception: %s", e, exc_info=True)
+                  raise Exception("Unexpected fatal exception. Please look at API logs for details on the encountered failure.")
 
   ApiGateway:
     Type: AWS::ApiGatewayV2::Api
@@ -378,238 +402,6 @@ Resources:
                   - secretsmanager:DeleteSecret
                 Resource:
                   - !Sub arn:${AWS::Partition}:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${AWS::StackName}*
-
-  PrivateEcrRepository:
-    DependsOn: ParallelClusterApi
-    Type: AWS::ECR::Repository
-    Properties:
-      RepositoryName: !Sub
-        - 'parallelcluster-ui-${StackIdSuffix}'
-        - { StackIdSuffix: !Select [2, !Split ['/', !Ref 'AWS::StackId']] }
-
-  ImageBuilderInstanceRole:
-    Type: AWS::IAM::Role
-    Properties:
-      ManagedPolicyArns:
-        - !Sub arn:${AWS::Partition}:iam::aws:policy/AmazonSSMManagedInstanceCore
-        - !Sub arn:${AWS::Partition}:iam::aws:policy/EC2InstanceProfileForImageBuilderECRContainerBuilds
-      AssumeRolePolicyDocument:
-        Statement:
-          - Action:
-              - sts:AssumeRole
-            Effect: Allow
-            Principal:
-              Service:
-                - !Sub ec2.${AWS::URLSuffix}
-        Version: '2012-10-17'
-      Path: /executionServiceEC2Role/
-
-  ImageBuilderInstanceProfile:
-    Type: AWS::IAM::InstanceProfile
-    Properties:
-      Path: /executionServiceEC2Role/
-      Roles:
-        - !Ref ImageBuilderInstanceRole
-
-  InfrastructureConfigurationSecurityGroup:
-    Condition: NonDefaultVpc
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      VpcId: !Ref ImageBuilderVpcId
-      GroupDescription: Parallel cluster image builder security group
-
-  InfrastructureConfiguration:
-    Type: AWS::ImageBuilder::InfrastructureConfiguration
-    Properties:
-      Name: !Sub
-        - ParallelClusterUIImageBuilderInfrastructureConfiguration-${Version}-${StackIdSuffix}
-        - { Version: !Join ['_', !Split ['.', !FindInMap [ParallelClusterUI, Constants, Version]]], StackIdSuffix: !Select [2, !Split ['/', !Ref 'AWS::StackId']] }
-      InstanceProfileName: !Ref ImageBuilderInstanceProfile
-      TerminateInstanceOnFailure: true
-      SubnetId:
-        Fn::If:
-          - NonDefaultVpc
-          - !Ref ImageBuilderSubnetId
-          - !Ref AWS::NoValue
-      SecurityGroupIds:
-        Fn::If:
-          - NonDefaultVpc
-          - [!Ref InfrastructureConfigurationSecurityGroup]
-          - !Ref AWS::NoValue
-      InstanceMetadataOptions:
-        HttpTokens: required
-
-  EcrImageRecipe:
-    Type: AWS::ImageBuilder::ContainerRecipe
-    Properties:
-      Components:
-        - ComponentArn: !Sub arn:${AWS::Partition}:imagebuilder:${AWS::Region}:aws:component/update-linux/x.x.x
-      ContainerType: DOCKER
-      Name: !Sub
-        - 'parallelcluster-ui-${Version}-${StackIdSuffix}'
-        - { Version: !Join ['_', !Split ['.', !FindInMap [ParallelClusterUI, Constants, Version]]], StackIdSuffix: !Select [2, !Split ['/', !Ref 'AWS::StackId']] }
-      Version: !FindInMap [ParallelClusterUI, Constants, Version]
-      ParentImage: !Ref PublicEcrImageUri
-      PlatformOverride: Linux
-      TargetRepository:
-        Service: ECR
-        RepositoryName: !Ref PrivateEcrRepository
-      DockerfileTemplateData: 'FROM {{{ imagebuilder:parentImage }}}'
-      WorkingDirectory: '/tmp'
-
-  EcrImage:
-    Type: AWS::ImageBuilder::Image
-    Properties:
-      ContainerRecipeArn: !Ref EcrImageRecipe
-      EnhancedImageMetadataEnabled: true
-      InfrastructureConfigurationArn: !Ref InfrastructureConfiguration
-      ImageTestsConfiguration:
-        ImageTestsEnabled: false
-
-  EcrImagePipeline:
-    Type: AWS::ImageBuilder::ImagePipeline
-    Properties:
-      Name: !Sub
-        - 'EcrImagePipeline-${Version}-${StackIdSuffix}'
-        - { Version: !Join ['_', !Split ['.', !FindInMap [ParallelClusterUI, Constants, Version]]], StackIdSuffix: !Select [2, !Split ['/', !Ref 'AWS::StackId']] }
-      Status: ENABLED
-      ContainerRecipeArn: !Ref EcrImageRecipe
-      InfrastructureConfigurationArn: !Ref InfrastructureConfiguration
-      ImageTestsConfiguration:
-        ImageTestsEnabled: false
-
-  EcrImageDeletionLambda:
-    Type: AWS::Lambda::Function
-    Properties:
-      MemorySize: 128
-      Code:
-        ZipFile: |
-          import cfnresponse
-          import boto3
-          import random
-          import string
-
-          ecr = boto3.client('ecr')
-          imagebuilder = boto3.client('imagebuilder')
-
-          def get_image_ids(repository_name, version):
-              image_digests = set()
-              paginator = ecr.get_paginator('list_images')
-              response_iterator = paginator.paginate(repositoryName=repository_name, filter={'tagStatus': 'TAGGED'})
-              for response in response_iterator:
-                  image_digests.update([image_id['imageDigest'] for image_id in response['imageIds']])
-              return list({'imageDigest': image_digest} for image_digest in image_digests)
-
-          def get_imagebuilder_images(ecr_image_pipeline_arn):
-              response = imagebuilder.list_image_pipeline_images(imagePipelineArn=ecr_image_pipeline_arn)
-              images = [image['arn'] for image in response['imageSummaryList']]
-              while 'nextToken' in response:
-                  response = imagebuilder.list_image_pipeline_images(imagePipelineArn=ecr_image_pipeline_arn, nextToken=response['nextToken'])
-                  images.extend([image['arn'] for image in response['imageSummaryList']])
-              return images
-
-          def create_physical_resource_id():
-              alnum = string.ascii_uppercase + string.ascii_lowercase + string.digits
-              return ''.join(random.choice(alnum) for _ in range(16))
-
-          def handler(event, context):
-              print(event)
-              print('boto version {}'.format(boto3.__version__))
-
-              response_data = {}
-              reason = None
-              response_status = cfnresponse.SUCCESS
-
-              if event['RequestType'] == 'Create':
-                  response_data['Message'] = 'Resource creation successful!'
-                  physical_resource_id = create_physical_resource_id()
-              else:
-                  physical_resource_id = event['PhysicalResourceId']
-
-              if event['RequestType'] == 'Update' or event['RequestType'] == 'Delete':
-                  try:
-                      resource_key = 'OldResourceProperties' if 'OldResourceProperties' in event else 'ResourceProperties'
-                      ecr_repository_name = event[resource_key]['EcrRepositoryName']
-                      ecr_image_pipeline_arn = event[resource_key]['EcrImagePipelineArn']
-                      version = event[resource_key]['Version']
-
-                      image_ids = get_image_ids(ecr_repository_name, version)
-                      if image_ids:
-                          ecr.batch_delete_image(repositoryName=ecr_repository_name, imageIds=image_ids)
-                          reason = 'Image deletion successful!'
-                      else:
-                          reason = 'No image found, considering image deletion successful'
-
-                      for imagebuilder_image in get_imagebuilder_images(ecr_image_pipeline_arn):
-                          imagebuilder.delete_image(imageBuildVersionArn=imagebuilder_image)
-
-                  except ecr.exceptions.RepositoryNotFoundException:
-                      reason = 'Repository was not found, considering image deletion successfull'
-                  except Exception as exception:
-                      response_status = cfnresponse.FAILED
-                      reason = 'Failed image deletion with error: {}'.format(exception)
-
-              cfnresponse.send(event, context, response_status, response_data, physical_resource_id, reason)
-
-      Handler: index.handler
-      Runtime: python3.7
-      Role: !GetAtt EcrImageDeletionLambdaRole.Arn
-
-  EcrImageDeletionLambdaLogGroup:
-    Type: AWS::Logs::LogGroup
-    Properties:
-      LogGroupName: !Sub /aws/lambda/${EcrImageDeletionLambda}
-
-  EcrImageDeletionLambdaRole:
-    Type: AWS::IAM::Role
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: 2012-10-17
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service: lambda.amazonaws.com
-            Action:
-              - 'sts:AssumeRole'
-      Policies:
-        - PolicyName: LoggingPolicy
-          PolicyDocument:
-            Version: 2012-10-17
-            Statement:
-              - Effect: Allow
-                Action:
-                  - logs:CreateLogStream
-                  - logs:PutLogEvents
-                Resource: !Sub arn:${AWS::Partition}:logs:*:*:*
-        - PolicyName: BatchDeletePolicy
-          PolicyDocument:
-            Version: 2012-10-17
-            Statement:
-              - Effect: Allow
-                Action:
-                  - ecr:BatchDeleteImage
-                  - ecr:ListImages
-                Resource: !GetAtt PrivateEcrRepository.Arn
-              - Effect: Allow
-                Action:
-                  - imagebuilder:ListImagePipelineImages
-                Resource: !Sub
-                  - arn:${AWS::Partition}:imagebuilder:${AWS::Region}:${AWS::AccountId}:image-pipeline/ecrimagepipeline-*${StackIdSuffix}*
-                  - { StackIdSuffix: !Select [2, !Split ['/', !Ref 'AWS::StackId']] }
-              - Effect: Allow
-                Action:
-                  - imagebuilder:DeleteImage
-                Resource: !Sub
-                  - arn:${AWS::Partition}:imagebuilder:${AWS::Region}:${AWS::AccountId}:image/*${StackIdSuffix}*
-                  - { StackIdSuffix: !Select [2, !Split ['/', !Ref 'AWS::StackId']] }
-
-  EcrImagesRemover:
-    Type: Custom::EcrImagesRemover
-    Properties:
-      ServiceToken: !GetAtt EcrImageDeletionLambda.Arn
-      EcrRepositoryName: !Ref PrivateEcrRepository
-      Version: !FindInMap [ParallelClusterUI, Constants, Version]
-      EcrImagePipelineArn: !GetAtt EcrImagePipeline.Arn
 
   ParallelClusterUILambdaLogGroup:
     Type: AWS::Logs::LogGroup
