--- a/.github/workflows/e2e_tests.yml
+++ b/.github/workflows/e2e_tests.yml
@@ -1,10 +1,10 @@
 name: e2e
 
 on:
-  workflow_run:
-    workflows: ["Deploy to Demo"]
-    types:
-      - completed
+  pull_request:
+  push:
+    branches:
+      - fix/e2e
 
 permissions:
   id-token: write
@@ -14,7 +14,7 @@ jobs:
   e2e-tests:
     timeout-minutes: 60
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+#    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
