--- a/infrastructure/parallelcluster-ui.yaml
+++ b/infrastructure/parallelcluster-ui.yaml
@@ -90,6 +90,11 @@ Conditions:
       - !Not [!Equals [!Ref SNSRole, ""]]
   UseNewCognito:
     !Not [ Condition: UseExistingCognito]
+  UseNonDockerizedPCAPI: !Or
+      - !Equals [!Ref Version, '3.6.0']
+      - !Equals [!Ref Version, '3.6.0b1']
+  UseDockerizedPCAPI:
+    !Not [ Condition: UseNonDockerizedPCAPI]
 
 Mappings:
   ParallelClusterUI:
@@ -121,14 +126,21 @@ Resources:
         ApiDefinitionS3Uri: !Sub s3://${AWS::Region}-aws-parallelcluster/parallelcluster/${Version}/api/ParallelCluster.openapi.yaml
         CreateApiUserRole: False
         EnableIamAdminAccess: True
-        PublicEcrImageUri: !Sub public.ecr.aws/parallelcluster/pcluster-api:${Version}
-        ImageBuilderSubnetId:
-          Fn::If:
-            - NonDefaultVpc
-            - !Ref ImageBuilderSubnetId
-            - !Ref AWS::NoValue
-        ImageBuilderVpcId:
-          Fn::If:
+        PublicEcrImageUri: !If
+          - UseNonDockerizedPCAPI
+          - !Ref AWS::NoValue
+          - !Sub public.ecr.aws/parallelcluster/pcluster-api:${Version}
+        ImageBuilderSubnetId: !If
+          - UseNonDockerizedPCAPI
+          - !Ref AWS::NoValue
+          - Fn::If:
+              - NonDefaultVpc
+              - !Ref ImageBuilderSubnetId
+              - !Ref AWS::NoValue
+        ImageBuilderVpcId: !If
+          - UseNonDockerizedPCAPI
+          - !Ref AWS::NoValue
+          - Fn::If:
             - NonDefaultVpc
             - !Ref ImageBuilderVpcId
             - !Ref AWS::NoValue
