--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,91 @@
-Flask-Cors==3.0.10
-Flask==2.1.2
-Werkzeug==2.2.3
+attrs==23.1.0
+    # via pytest
 boto3==1.24.30
-requests==2.28.1
-python-jose==3.3.0
-PyYAML==6.0
-pytest==7.1.2
-pytest-mock==3.8.2
+    # via -r requirements.in
+botocore==1.27.96
+    # via
+    #   boto3
+    #   s3transfer
+certifi==2022.12.7
+    # via requests
+charset-normalizer==2.1.1
+    # via requests
+click==8.1.3
+    # via flask
+ecdsa==0.18.0
+    # via python-jose
+flask==2.1.2
+    # via
+    #   -r requirements.in
+    #   flask-cors
+flask-cors==3.0.10
+    # via -r requirements.in
+idna==3.4
+    # via requests
+importlib-metadata==6.6.0
+    # via flask
+iniconfig==2.0.0
+    # via pytest
 itsdangerous==2.1.2
+    # via
+    #   -r requirements.in
+    #   flask
+jinja2==3.1.2
+    # via flask
+jmespath==1.0.1
+    # via
+    #   boto3
+    #   botocore
+markupsafe==2.1.2
+    # via
+    #   jinja2
+    #   werkzeug
 marshmallow==3.19.0
+    # via -r requirements.in
+packaging==23.1
+    # via
+    #   marshmallow
+    #   pytest
+pluggy==1.0.0
+    # via pytest
+py==1.11.0
+    # via pytest
+pyasn1==0.5.0
+    # via
+    #   python-jose
+    #   rsa
+pytest==7.1.2
+    # via
+    #   -r requirements.in
+    #   pytest-mock
+pytest-mock==3.8.2
+    # via -r requirements.in
+python-dateutil==2.8.2
+    # via botocore
+python-jose==3.3.0
+    # via -r requirements.in
+pyyaml==6.0
+    # via -r requirements.in
+requests==2.28.1
+    # via -r requirements.in
+rsa==4.9
+    # via python-jose
+s3transfer==0.6.1
+    # via boto3
+six==1.16.0
+    # via
+    #   ecdsa
+    #   flask-cors
+    #   python-dateutil
+tomli==2.0.1
+    # via pytest
+urllib3==1.26.15
+    # via
+    #   botocore
+    #   requests
+werkzeug==2.2.3
+    # via
+    #   -r requirements.in
+    #   flask
+zipp==3.15.0
+    # via importlib-metadata
