--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ click==8.1.3
     # via flask
 ecdsa==0.18.0
     # via python-jose
+exceptiongroup==1.1.1
+    # via pytest
 flask==2.1.2
     # via
     #   -r requirements.in
@@ -48,13 +50,11 @@ packaging==23.1
     #   pytest
 pluggy==1.0.0
     # via pytest
-py==1.11.0
-    # via pytest
 pyasn1==0.5.0
     # via
     #   python-jose
     #   rsa
-pytest==7.1.2
+pytest==7.2.2
     # via
     #   -r requirements.in
     #   pytest-mock
