--- a/Dockerfile.awslambda
+++ b/Dockerfile.awslambda
@@ -1,4 +1,4 @@
-FROM public.ecr.aws/lambda/python:3.8
+FROM public.ecr.aws/lambda/python:3.8.2021.12.18.01-x86_64
 
 COPY --from=frontend-awslambda /app/build ${LAMBDA_TASK_ROOT}/frontend/public
 
